--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "cy:run:regression": "cypress run --env grepTags=@regression",
+    "cy:run:smoke": "cypress run --env grepTags=@smoke"
   },
   "keywords": [],
   "author": "",
