--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.1",
-    "esbuild": "^0.21.5"
+    "esbuild": "^0.21.5",
+    "cypress": "^13.11.0",
+    "@badeball/cypress-cucumber-preprocessor": "^10.4.0",
+    "mocha-junit-reporter": "^2.0.0"
   }
 }
